kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tripo04os
  labels:
    name: tripo04os
    environment: production
